Add optional includes for special wand/faucet gitconfig.

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -7,3 +7,7 @@
 	sort = authordate
 [column]
 	branch = auto
+[includeIf "gitdir:~/Dev/wand/"]
+	path = ~/Dev/wand/.gitconfig
+[includeIf "gitdir:~/Dev/faucet/"]
+	path = ~/Dev/faucet/.gitconfig
