Add optional includes for special fsmg gitconfig.

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -13,3 +13,5 @@
 	path = ~/Dev/wand/.gitconfig
 [includeIf "gitdir:~/Dev/faucet/"]
 	path = ~/Dev/faucet/.gitconfig
+[includeIf "gitdir:~/Dev/fsmg/"]
+	path = ~/Dev/fsmg/.gitconfig
