Add optional includes for special canopus gitconfig.

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -15,3 +15,5 @@
 	path = ~/Dev/faucet/.gitconfig
 [includeIf "gitdir:~/Dev/fsmg/"]
 	path = ~/Dev/fsmg/.gitconfig
+[includeIf "gitdir:~/Dev/canopus/"]
+	path = ~/Dev/canopus/.gitconfig
