Add optional includes for special kde gitconfig.

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -17,5 +17,7 @@
 	path = ~/Dev/faucet/.gitconfig
 [includeIf "gitdir:~/Dev/fsmg/"]
 	path = ~/Dev/fsmg/.gitconfig
+[includeIf "gitdir:~/Dev/kde/"]
+	path = ~/Dev/kde/.gitconfig
 [includeIf "gitdir:~/Dev/canopus/"]
 	path = ~/Dev/canopus/.gitconfig
