Add optional includes for special dualpath gitconfig.

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -21,3 +21,5 @@
 	path = ~/Dev/kde/.gitconfig
 [includeIf "gitdir:~/Dev/canopus/"]
 	path = ~/Dev/canopus/.gitconfig
+[includeIf "gitdir:~/Dev/canopus/"]
+	path = ~/Dev/dualpath/.gitconfig
