--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -21,5 +21,5 @@
 	path = ~/Dev/kde/.gitconfig
 [includeIf "gitdir:~/Dev/canopus/"]
 	path = ~/Dev/canopus/.gitconfig
-[includeIf "gitdir:~/Dev/canopus/"]
+[includeIf "gitdir:~/Dev/dualpath/"]
 	path = ~/Dev/dualpath/.gitconfig
