Add optional includes for special tff gitconfig.

--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -23,3 +23,5 @@
 	path = ~/Dev/canopus/.gitconfig
 [includeIf "gitdir:~/Dev/dualpath/"]
 	path = ~/Dev/dualpath/.gitconfig
+[includeIf "gitdir:~/Dev/tff/"]
+	path = ~/Dev/tff/.gitconfig
