--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -1,7 +1,7 @@
 [user]
 	name = Brad Cowie
 	email = {{ .email }}
-	signingkey = ~/.ssh/id_ed25519.pub
+	signingKey = ~/.ssh/id_ed25519.pub
 [core]
 	editor = vim
 [init]
@@ -12,6 +12,8 @@
 	sort = authordate
 [column]
 	branch = auto
+[commit]
+	gpgSign = true
 [gpg]
 	format = ssh
 [includeIf "gitdir:~/Dev/wand/"]
