--- a/dot_gitconfig.tmpl
+++ b/dot_gitconfig.tmpl
@@ -24,6 +24,8 @@
 [delta]
 	side-by-side = true
 	navigate = true
+[submodule]
+	recurse = true
 [includeIf "gitdir:~/Dev/wand/"]
 	path = ~/Dev/wand/.gitconfig
 [includeIf "gitdir:~/Dev/faucet/"]
